[gd_scene load_steps=2 format=3 uid="uid://qx4kvoolvwl1"]

[ext_resource type="Script" uid="uid://dlyudkq6obgmx" path="res://UI/acciones.gd" id="1_gxia2"]

[node name="acciones" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_gxia2")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 318.0
offset_top = 158.0
offset_right = 457.0
offset_bottom = 310.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Atacar" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ATACAR"

[node name="Defender" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "DEFENDER"

[node name="Habilidades" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "HABILIDADES"

[node name="Huir" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "HUIR"

[connection signal="button_down" from="PanelContainer/MarginContainer/VBoxContainer/Atacar" to="." method="_on_atacar_button_down"]
[connection signal="button_down" from="PanelContainer/MarginContainer/VBoxContainer/Defender" to="." method="_on_defender_button_down"]
[connection signal="button_down" from="PanelContainer/MarginContainer/VBoxContainer/Habilidades" to="." method="_on_habilidades_button_down"]
[connection signal="button_down" from="PanelContainer/MarginContainer/VBoxContainer/Huir" to="." method="_on_huir_button_down"]
